# snake-os

./: Cargo.toml  LICENSE  README.md  makefile  x86_64-snake-os.json
.cargo/: config.toml
src/: boot.asm  main.c  main.rs  serial.rs  snake.rs  vga_buffer.rs
