[package]
name = "snake-os"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.3"
uart_16550 = "0.2.18"
volatile = "0.2.6"
x86_64 = "0.14.9"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none",
    ]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300
